# backup

rwa-prediction-market/: .gitignore  Anchor.toml  Cargo.toml  Dockerfile  docker-compose.yml  package.json
rwa-prediction-market/app/: package-lock.json  package.json
rwa-prediction-market/app/app/: globals.css  layout.tsx  page.tsx
rwa-prediction-market/app/app/create/: page.tsx
rwa-prediction-market/app/app/portfolio/: page.tsx
rwa-prediction-market/app/components/layout/: Navbar.tsx
rwa-prediction-market/app/components/markets/: MarketCard.tsx  PriceDisplay.tsx
rwa-prediction-market/app/hooks/: useProgram.ts  usePythPrice.ts
rwa-prediction-market/app/idl/: prediction_market.json  transfer_hook.json
rwa-prediction-market/app/lib/: carbon.ts  constants.ts  x402.ts
rwa-prediction-market/app/scripts/: seed-local.js  seed-local.ts
rwa-prediction-market/programs/prediction-market/: Cargo.toml
rwa-prediction-market/programs/prediction-market/src/: constants.rs  errors.rs  events.rs  lib.rs
rwa-prediction-market/programs/prediction-market/src/instructions/: buy_room_access.rs  cancel_bet.rs  claim_winnings.rs  create_market.rs  faucet.rs  mint_rwa.rs  mod.rs  place_bet.rs  resolve_market.rs  sample_price.rs
rwa-prediction-market/programs/prediction-market/src/state/: market.rs  mod.rs  position.rs  room_access.rs
rwa-prediction-market/programs/transfer-hook/: Cargo.toml
rwa-prediction-market/programs/transfer-hook/src/: lib.rs
rwa-prediction-market/scripts/: deploy.sh
rwa-prediction-market/tests/: prediction-market.ts  transfer-hook.ts
(+3 files in other folders)
