[package]
name = "prediction-market"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "prediction_market"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.0", features = ["token_2022", "associated_token"] }
spl-token-2022 = { version = "3.0.1", default-features = false, features = ["no-entrypoint"] }
spl-transfer-hook-interface = "0.6.1"
pyth-sdk-solana = "0.10.1"
spl-token-metadata-interface = "0.3.3"
